force-app/main/default/objects/Opportunity/fields/PartnerContractID__c.field-meta.xml
<CustomField>
    <fullName>PartnerContractID__c</fullName>
    <formula>Contract.PartnerContractID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partnervertrags-ID</label>
    <type>Text</type>
</CustomField>