force-app/main/default/objects/Opportunity/fields/SubDealerID__c.field-meta.xml
<CustomField>
    <fullName>SubDealerID__c</fullName>
    <formula>Contract.SubDealerID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UVP-ID</label>
    <type>Text</type>
</CustomField>