force-app/main/default/objects/Opportunity/recordTypes/B2BSalesOpportunity.recordType-meta.xml
<RecordType>
    <fullName>B2BSalesOpportunity</fullName>
    <active>true</active>
    <businessProcess>B2B Sales Process</businessProcess>
    <label>B2B Sales Opportunity</label>
</RecordType>