force-app/main/default/objects/Opportunity/validationRules/x01_Closed_Lost_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>x01_Closed_Lost_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>IsWon = false &amp;&amp; IsClosed = true &amp;&amp; INCLUDES(CloseLostReason__c, &quot;Sonstiges&quot;) &amp;&amp; ISBLANK(NoteCloseLostReason__c)</errorConditionFormula>
    <errorDisplayField>CloseLostReason__c</errorDisplayField>
    <errorMessage>Geben Sie den Grund an, warum der Hinweis kein Potenzial hat. Opportunity Error x01.</errorMessage>
</ValidationRule>