force-app/main/default/objects/Opportunity/validationRules/x02_Notes_Closed_Lost_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>x02_Notes_Closed_Lost_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>IsWon = false &amp;&amp; IsClosed = true &amp;&amp; INCLUDES(CloseLostReason__c, &quot;Sonstiges&quot;)</errorConditionFormula>
    <errorDisplayField>NoteCloseLostReason__c</errorDisplayField>
    <errorMessage>Sie müssen eine Erklärung abgeben. Opportunity Error x02.</errorMessage>
</ValidationRule>