force-app/main/default/objects/Opportunity/validationRules/x04_Closed_Won_Modified.validationRule-meta.xml
<ValidationRule>
    <fullName>x04_Closed_Won_Modified</fullName>
    <active>true</active>
    <errorConditionFormula>IsWon = true &amp;&amp; IsClosed = false &amp;&amp; ISCHANGED(StageName)</errorConditionFormula>
    <errorMessage>Sie können eine gewonnene Opportunity nicht ändern. Opportunity Error x04.</errorMessage>
</ValidationRule>