force-app/main/default/objects/Opportunity/listViews/Alle_berfaelligen_Opps.listView-meta.xml
<ListView>
    <fullName>Alle_berfaelligen_Opps</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.LAST_STAGE_CHANGE</columns>
    <columns>CloseLostReason__c</columns>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Gewonnen,Verloren,Zurückgezogen</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Alle überfälligen Opps</label>
</ListView>