force-app/main/default/objects/Opportunity/listViews/Alle_gewonnenen_Opps.listView-meta.xml
<ListView>
    <fullName>Alle_gewonnenen_Opps</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.LAST_STAGE_CHANGE</columns>
    <columns>CloseLostReason__c</columns>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Gewonnen</value>
    </filters>
    <label>Alle gewonnenen Opps</label>
</ListView>