force-app/main/default/objects/Opportunity/listViews/Alle_Opps_schliessen_naechsten_Monat.listView-meta.xml
<ListView>
    <fullName>Alle_Opps_schliessen_naechsten_Monat</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.LAST_STAGE_CHANGE</columns>
    <columns>CloseLostReason__c</columns>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>NEXT_MONTH</value>
    </filters>
    <label>Alle Opps schliessen nächsten Monat</label>
</ListView>