force-app/main/default/objects/Opportunity/listViews/Meine_offenen_Opp.listView-meta.xml
<ListView>
    <fullName>Meine_offenen_Opp</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.LAST_STAGE_CHANGE</columns>
    <columns>CloseLostReason__c</columns>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Gewonnen,Verloren,Zurückgezogen</value>
    </filters>
    <label>Meine offenen Opp</label>
</ListView>